green: Add the bids to the body response of the retrieve bid and make app executable on Docker
